--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
     </div>
     <div class="container">
       <h5 id="reviews"></h5>
+      <h3>Other Properties recommended to you:</h3> 
+      <div class="properties"></div>
     </div>
+    <div class="footer"></div>
     <script src="index.js"></script>
   </body>
 </html>
